# DataProvider

./: .gitignore  AGENTS.md  CLAUDE.md  CodeAnalysis.ruleset  Directory.Build.props  Makefile  README.md  coverage-thresholds.json
.github/workflows/: ci.yml  deploy-lql-website.yml  release.yml
DataProvider/: README.md
DataProvider/Nimblesite.DataProvider.Core/: README.md
DataProvider/Nimblesite.DataProvider.Example/: Nimblesite.DataProvider.Example.csproj
Lql/LqlWebsite-Eleventy/: eleventy.config.js  package.json
Lql/Nimblesite.Lql.Tests/: LqlErrorHandlingTests.cs  LqlFnCallInLambdaTests.cs
Lql/Nimblesite.Lql.TypeProvider.FSharp.Tests/: Nimblesite.Lql.TypeProvider.FSharp.Tests.fsproj  TypeProviderE2ETests.fs
Lql/Nimblesite.Lql.TypeProvider.FSharp.Tests.Data/: Nimblesite.Lql.TypeProvider.FSharp.Tests.Data.csproj
Lql/lql-lsp-rust/crates/lql-lsp/: Cargo.toml
Lql/lql-lsp-rust/crates/lql-lsp/src/: ai.rs  db.rs  lib.rs  main.rs
Lql/lql-lsp-rust/crates/lql-lsp/tests/: lsp_protocol.rs  postgres_schema.rs
Migration/: README.md
Migration/DataProviderMigrate/: Program.cs
Migration/Nimblesite.DataProvider.Migration.Core/: GlobalUsings.cs  LqlFunctionBodyTranspiler.cs  MigrationError.cs  MigrationRunner.cs  Nimblesite.DataProvider.Migration.Core.csproj  RlsCurrentSettingRewriter.cs  RlsDefinition.cs  RlsPredicateTranspiler.cs  SchemaBuilder.cs  SchemaConstraintNames.cs  SchemaDefinition.cs  SchemaDiff.Support.cs  SchemaDiff.cs  SchemaIntegrityVerifier.cs  (+2 more)
Reporting/: spec.md
Tests.Shared/: PostgresContainerFixture.cs
Website/: package.json
(+78 files in other folders)
