[package]
name = "lql-lsp"
version.workspace = true
edition.workspace = true

[lib]
name = "lql_lsp"
path = "src/lib.rs"

[[bin]]
name = "lql-lsp"
path = "src/main.rs"

[dependencies]
lql-parser = { path = "../lql-parser" }
lql-analyzer = { path = "../lql-analyzer" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
testcontainers-modules = { version = "0.15", features = ["postgres", "blocking"] }
